--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Nanit Happy Birthday</string>
+
+    <string name="today_is_msg">TODAY %1$s IS</string>
+    <string name="old_msg">%1$s OLD</string>
+    <string name="plural_suffix">S</string>
+    <string name="no_ip_msg">No IP address was set yet. Press the settings button to configure it.</string>
+    <string name="no_birthday_msg">Oops! No birthday data was received.</string>
+    <string name="enter_ip_title">Enter IP Address:</string>
+    <string name="save_button_text">Save &amp; Request></string>
+    <string name="cancel_button_text">Cancel</string>
 </resources>
